// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays ✔ on click 1`] = `
<span
  class=""
>
  <button>
    <div
      height="10"
      id="mock-icon"
      kind="copy"
      width="10"
    >
      <title>
        icon-
        copy
      </title>
    </div>
  </button>
</span>
`;

exports[`displays ✔ on click 2`] = `
<span
  class=""
>
  <button>
    <span>
      ✔
    </span>
  </button>
</span>
`;

exports[`displays ✔ on click 3`] = `
<span
  class=""
>
  <button>
    <div
      height="10"
      id="mock-icon"
      kind="copy"
      width="10"
    >
      <title>
        icon-
        copy
      </title>
    </div>
  </button>
</span>
`;

exports[`renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class=""
      >
        <button>
          <div
            height="10"
            id="mock-icon"
            kind="copy"
            width="10"
          >
            <title>
              icon-
              copy
            </title>
          </div>
        </button>
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class=""
    >
      <button>
        <div
          height="10"
          id="mock-icon"
          kind="copy"
          width="10"
        >
          <title>
            icon-
            copy
          </title>
        </div>
      </button>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllBySelectText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getBySelectText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllBySelectText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryBySelectText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
